Fix header align

--- a/css/_sass/sidebar.sass
+++ b/css/_sass/sidebar.sass
@@ -13,13 +13,20 @@ aside
       font-size: 1.9em
       font-weight: bold
       color: $sidebar-title-color
-      text-shadow: white 1px 1px 0px
+
       a
         color: $sidebar-title-color
         display: block
         position: static
         top: 0
         width: inherit
+        text-align: initial
+        maring: 0 0
+        height: auto
+        line-height: inherit
+        text-shadow: white 1px 1px 0px
+        border: 0px none red
+        border-radius: 0
     h2
       font-size: 0.9em
       font-weight: 100
